mobile preview spacing fixed

--- a/index.css
+++ b/index.css
@@ -39,5 +39,6 @@
 
  @media screen and (max-width: 768px) {
     .container-custom{
-        width: 100%;
+        width: 80%;
+        margin-top: 16%;
     }
